Changed View part of employee model

--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -36,6 +36,11 @@
     <%= form.number_field :salary %>
   </div>
 
+  <div class="field">
+    <%= form.label :companyId %>
+    <%= form.number_field :companyId %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
