--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -10,6 +10,7 @@
       <th>Doj</th>
       <th>Designation</th>
       <th>Salary</th>
+      <th>Company</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,6 +23,7 @@
         <td><%= employee.doj %></td>
         <td><%= employee.designation %></td>
         <td><%= employee.salary %></td>
+        <td><%= employee.company.name %></td>
         <td><%= link_to 'Show', employee %></td>
         <td><%= link_to 'Edit', edit_employee_path(employee) %></td>
         <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
