Added publisher form field in whole scaffold

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :fullname %>
+    <%= form.text_field :fullname %>
   </div>
 
   <div class="field">
@@ -24,6 +24,11 @@
   <div class="field">
     <%= form.label :price %>
     <%= form.text_field :price %>
+  </div>
+
+  <div class="field">
+    <%= form.label :publisher %>
+    <%= form.text_field :publisher %>
   </div>
 
   <div class="actions">
