--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,6 +8,7 @@
       <th>Name</th>
       <th>Author</th>
       <th>Price</th>
+      <th>Publisher</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,9 +16,10 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= book.name %></td>
+        <td><%= book.fullname %></td>
         <td><%= book.author %></td>
         <td><%= book.price %></td>
+        <td><%= book.publisher %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
