--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -1,2 +1,20 @@
-<h1>Admin#login</h1>
-<p>Find me in app/views/admin/login.html.erb</p>
+<h1> Admin Login Area</h1>
+
+<h2> <%= flash[:notice] %> </h2>
+
+<%= form_with do |form| %>
+    <div class="field">
+      <%= form.label :username %>
+      <%= form.text_field :username %>
+    </div>
+  
+    <div class="field">
+      <%= form.label :password %>
+      <%= form.password_field :password %>
+    </div>
+  
+    <div class="actions">
+      <%= form.submit "Login" %>
+    </div>
+  <% end %>
+  
